Implementando componentes Navbar e footer aula 01

--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<div class="container w-100">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-monospace text-center">Sejam bem vindes ao meu blog! </h1>
+        </div>
+    </div>
+<div class="row w-100 mt-4 mb-4">
+    <div class="col-md-12">
+        <p class="text-justify text-monospace">
+           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium maiores repudiandae sed obcaecati pariatur amet deserunt fuga incidunt quod tenetur sint dicta dolorem ratione ducimus beatae, voluptate fugiat iste unde.
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi odit totam, veniam nostrum impedit nisi qui sit molestiae nemo in harum quas voluptate tempore deleniti assumenda laudantium quis aliquid blanditiis!
+           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam architecto rem quaerat tempora eum quibusdam dolorem asperiores vitae aut nulla! Officiis sunt provident cupiditate cum ratione perferendis delectus nobis vitae.
+        </p>
+    </div>
+  </div> 
+</div>
+
+<div class="parallax"></div>
+
+<div class="row w-100 mt-5 mb-5">
+    <div class="col-md-12 w-100 d-flex justify-content-center">
+        <button class="btn btn-outline-dark text-uppercase font-weight-bold"> Ver o feed
+        </button>
+    </div>
+</div>
+
+
+
