Implementando as rotas

--- a/blogPessoal/src/app/footer/footer.component.css
+++ b/blogPessoal/src/app/footer/footer.component.css
@@ -28,3 +28,12 @@ ul.social-network {
   .faInstagram:hover{
   color: #C13584;
   }
+
+  .bg-color{
+    background-color: black;
+  }
+
+  .bg-copy
+  {
+    background-color: #b2639a;
+  }
