--- a/blogPessoal/src/app/footer/footer.component.html
+++ b/blogPessoal/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small bg-secondary pt-4">
+<footer class="page-footer font-small bg-color pt-4">
 
     <!-- Footer Elements -->
     <div class="container">
@@ -34,9 +34,9 @@
     <!-- Footer Elements -->
   
     <!-- Copyright -->
-    <div class="footer-copyright bg-dark text-center py-3 ">
-        <span class="text-light"> © 2020 Copyright: </span>
-        <a class="text-light" href="https://brasil.generation.org">brasil.generation.org</a>
+    <div class="footer-copyright bg-copy text-center py-3 ">
+        <span class="text-light"> ©2020 Victor Hugo Entertainment Group. Todos os direitos reservados. </span>
+        <a class="text-light"></a>
     </div>
     <!-- Copyright -->
   
