--- a/blogPessoal/src/app/home/home.component.css
+++ b/blogPessoal/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .parallax {
-    background-image: url('https://i.imgur.com/PEoH72I.jpg');
+    background-image: url(https://i.pinimg.com/originals/d8/97/ce/d897ce208f857da962c505a88c0ef1bd.jpg);
 
     min-height: 500px;
 
