--- a/blogPessoal/src/app/navbar/navbar.component.html
+++ b/blogPessoal/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid d-flex justify-content-center">
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-color">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3" href="#">Home <span class="sr-only">(página atual)</span></a>
+              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3 text-light" routerLink='/home'>Home <span class="sr-only">(página atual)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3" href="#">Feed</a>
+              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3 text-light" routerLink='/feed'>Feed</a>
             </li>
           </ul>
         </div>
