Consumo da API)

--- a/blogPessoal/src/app/home/home.component.css
+++ b/blogPessoal/src/app/home/home.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rye&display=swap');
+
 .parallax {
     background-image: url(https://i.pinimg.com/originals/d8/97/ce/d897ce208f857da962c505a88c0ef1bd.jpg);
 
