--- a/blogPessoal/src/app/navbar/navbar.component.html
+++ b/blogPessoal/src/app/navbar/navbar.component.html
@@ -1,20 +1,39 @@
 <div class="container-fluid d-flex justify-content-center">
-    <nav class="navbar navbar-expand-lg navbar-light bg-color">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3 text-light" routerLink='/home'>Home <span class="sr-only">(página atual)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3 text-light" routerLink='/feed'>Feed</a>
-            </li>
-          </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-color">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3 text-light" routerLink='/home'>Home <span class="sr-only">(página atual)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3 text-light" routerLink='/feed'>Feed</a>
+        </li>
+
+        <div *ngIf='auth.btnLogin()'>
+          <li class="nav-item">
+            <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3 text-light" routerLink='/login'>Login</a>
+          </li>
         </div>
-      </nav>
-    
+
+        <div *ngIf='auth.btnLogin()'>
+          <li class="nav-item">
+            <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3 text-light" routerLink='/cadastro'>Cadastro</a>
+          </li>
+        </div>
+
+        <div *ngIf='auth.btnSair()'>
+          <li class="nav-item">
+            <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3 text-light" (click)='sair()'>Sair</a>
+          </li>
+        </div>
+
+      </ul>
+    </div>
+  </nav>
 </div>
 
