--- a/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -4,7 +4,7 @@
     </div>
     
     <div class="card-body text-light">
-      <h5 class="card-title text-center text-monospace text-light">Victor Hugo</h5>
+      <h5 class="card-title text-center text-monospace text-light">{{nome}}</h5>
       <p class="card-text text-monospace text-center">Estudante de Desenvolvimento Web Fullstack na Generation Brasil.</p>
       
       <a href="https://www.linkedin.com/in/victorhup/" class="btn btn-dark mb-3 d-flex justify-content-center" target="_blank"> 
