--- a/blogPessoal/src/app/footer/footer.component.html
+++ b/blogPessoal/src/app/footer/footer.component.html
@@ -34,7 +34,7 @@
     <!-- Footer Elements -->
   
     <!-- Copyright -->
-    <div class="footer-copyright bg-copy text-center py-3 ">
+    <div class="footer-copyright bg-copy text-center py-3 mt-5 ">
         <span class="text-light"> ©2020 Victor Hugo Entertainment Group. Todos os direitos reservados. </span>
         <a class="text-light"></a>
     </div>
