--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container w-100">
     <div class="row">
         <div class="col-md-12">
-            <h1 class="text-monospace text-center">Sejam bem vindes ao meu blog! </h1>
+            <h1 class="text-monospace text-center titulo ">Sejam bem vindes ao meu blog! </h1>
         </div>
     </div>
 <div class="row w-100 mt-4 mb-4">
@@ -17,10 +17,43 @@
 
 <div class="parallax"></div>
 
+
+
 <div class="row w-100 mt-5 mb-5">
     <div class="col-md-12 w-100 d-flex justify-content-center">
         <button class="btn btn-outline-dark text-uppercase font-weight-bold" routerLink='/feed'> Ver o feed
         </button>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="https://miro.medium.com/max/1800/1*E3KSaBS7VjbSRFd1VR5wGA.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="https://teletype.in/files/0c/0c0cb15e-b2d6-4dea-8048-b18c27ef7e49.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="https://miro.medium.com/max/1800/1*bAVb01-_dv0duA-Yj3K86A.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
     </div>
 </div>
 
