--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -7,7 +7,7 @@
 
         <div class="col-md-8">
 
-            <h3 class="text center mb-4 text-monospace">Como tem sido minha experiência na Generation?</h3>
+            <h3 class="text-center mb-4 text-monospace">Como tem sido minha experiência na Generation?</h3>
 
             <div class="form-group">
                 <label class="text-monospace" for="titulo">Título:</label>
@@ -23,25 +23,25 @@
 
                 <div class="col-md-6">
                     <div class="form-group m-0">
-                        <label class="text-monospace" for="tema">Escolha um tema ou <a
-                                routerLink='/cadastro-tema'>Cadastre um novo</a></label>
-                        <select name="tema" id='tema' class="form-control">
-                            <option>
-                                teste 123
+                        <label class="text-monospace" for="tema">Escolha um tema ou <a href="">Cadastre um
+                                novo</a></label>
+                        <select name="tema" id='tema' class="form-control" [(ngModel)]='idTema' (change) = 'findByIdTema()'>
+                            <option *ngFor = 'let item of listaTemas' value={{item.id}}>
+                                {{item.descricao}}
                             </option>
                         </select>
                     </div>
                 </div>
 
                 <div class="col-md-6 d-flex justify-content-end">
-                    <button type="button" class="btn btn-outline-dark w-25">Publicar</button>
+                    <button type="button" class="btn btn-outline-info w-25">Publicar</button>
                 </div>
 
             </div>
 
             <hr class="mt-5 mb-5">
 
-            <nav class="d-flex justify-content-center">
+            <nav class="d-flex center justify-content-center">
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                     <a class="nav-item nav-link active text-secondary font-weight-bold" id="nav-home-tab"
                         data-toggle="tab" href="#minhas-postagens" role="tab" aria-controls="nav-home"
@@ -51,31 +51,74 @@
                         href="#postagens-temas" role="tab" aria-controls="nav-profile" aria-selected="false">Postagens
                         por tema</a>
                 </div>
+
             </nav>
+
             <div class="tab-content" id="nav-tabContent">
+
                 <div class="tab-pane fade show active" id="minhas-postagens" role="tabpanel"
                     aria-labelledby="nav-postagens-tab">
-                    <div class="row">
+                    <div class="row mt-3 mb-3">
                         <div class="col-md-10 pr-0">
                             <input class="form-control w-100" type="search" placeholder="Pesquisar postagem"
                                 aria-label="Pesquisar">
                         </div>
                         <div class="col-md-2 pl-0">
-                            <button class="btn btn-outline-dark w-100" type="button">Pesquisar</button>
+                            <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
                         </div>
                     </div>
-                </div>
-                <div class="tab-content" id="nav-tabContent">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card mt-5 mb-5" *ngFor="let item of listaPostagens">
+                                <div class="card-header">
+                                    <div class="row d-flex align-items-center">
+                                        <div class="col-md-8">
+                                            <h5 class="card-title"> {{item.titulo}} </h5>
+                                            <small>Tema: {{item.tema.descricao}} </small>
+                                        </div>
+                                        <div class="col-md-4 d-flex justify-content-end">
 
-                    <div class="tab-pane fade show active" id="minhas-postagens" role="tabpanel"
-                        aria-labelledby="nav-postagens-tab">
-                        <div class="row mt-3 mb-3">
+                                            <button class="mr-3 btn btn-outline-info"
+                                               >
+                                                Editar
+                                            </button>
 
+                                            <button class="btn btn-outline-danger ml-3"
+                                                >
+                                                Apagar
+                                            </button>
 
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card-body">
+                                    <p class="card-text" aria-describedby="texto"> {{item.texto}} </p>
+                                    <small id="texto" class="form-text m-0 text-muted mb-3 text-monospace">
+                                        Postado em {{item.data | date: 'dd/MM/yyyy'}} às
+                                        {{item.data | date:'HH:mm'}}</small>
+                                </div>
+
+                            </div>
                         </div>
 
-                   </div>
+                    </div>
+
+                    <div class="tab-pane fade show active" id="postagens-temas" role="tabpanel"
+                        aria-labelledby="nav-postagens-tab">
+                        <div class="row mt-3 mb-3">
+                            <div class="col-md-10 pr-0">
+                                <input class="form-control w-100" type="search" placeholder="Pesquisar temas"
+                                    aria-label="Pesquisar">
+                            </div>
+                            <div class="col-md-2 pl-0">
+                                <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
+
             </div>
         </div>
+    </div>
